--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
   <video controls autoplay>
-    <source src="video.mp4" type="video/mp4">
+    <source src="https://github.com/Peanut03/RK3588-ELF2/blob/main/video.mp4" type="video/mp4">
     Your browser does not support the video tag.
   </video>
 </body>
